fixed summary alignment

--- a/css/projects.css
+++ b/css/projects.css
@@ -272,6 +272,7 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   align-items: start;
+  justify-content: center;
   justify-self: center;
 }
 
